# spatial-anno-metrics

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: cell-annotation-quality-metrics.md
src/spatial_anno_metrics/: __init__.py  confidence.py  eval_metrics.py  purity.py  signal_qc.py  spatial.py
tests/: test_aqi.py  test_confidence.py  test_eval_metrics.py  test_new_metrics.py  test_purity.py  test_signal_qc.py  test_spatial.py
